--- a/package.json
+++ b/package.json
@@ -4,20 +4,25 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "graphql": "^14.6.0",
     "graphql-tools": "^4.0.7",
     "graphql-yoga": "^1.18.3",
     "merge-graphql-schemas": "^1.7.6",
+    "morgan": "^1.9.1",
+    "path": "^0.12.7",
     "prisma": "^1.34.10",
     "ts-node": "^8.6.2",
     "typescript": "^3.8.2"
   },
   "scripts": {
-    "dev": "ts-node src",
+    "dev": "nodemon --exec ts-node src/app.ts",
     "prisma:deploy": "prisma deploy",
     "prisma:generate": "prisma generate",
-    "prisma": "yarn run deploy && yarn run generate"
+    "prisma": "yarn run prisma:deploy && yarn run prisma:generate"
   },
   "devDependencies": {
+    "@types/morgan": "^1.7.37",
     "nodemon": "^2.0.2"
   }
 }
