--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "license": "MIT",
   "dependencies": {
+    "aws-sdk": "^2.628.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^14.6.0",
@@ -10,6 +11,10 @@
     "graphql-yoga": "^1.18.3",
     "merge-graphql-schemas": "^1.7.6",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
+    "nodemailer": "^6.4.3",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "path": "^0.12.7",
     "prisma": "^1.34.10",
     "ts-node": "^8.6.2",
@@ -23,6 +28,9 @@
   },
   "devDependencies": {
     "@types/morgan": "^1.7.37",
+    "@types/multer": "^1.4.2",
+    "@types/multer-s3": "^2.7.7",
+    "@types/nodemailer": "^6.4.0",
     "nodemon": "^2.0.2"
   }
 }
