--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "graphql": "^14.6.0",
     "graphql-tools": "^4.0.7",
     "graphql-yoga": "^1.18.3",
+    "lodash": "^4.17.15",
     "merge-graphql-schemas": "^1.7.6",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
