--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "multer-s3": "^2.9.0",
     "nodemailer": "^6.4.3",
     "nodemailer-sendgrid-transport": "^0.2.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "path": "^0.12.7",
     "prisma": "^1.34.10",
     "ts-node": "^8.6.2",
@@ -35,6 +37,8 @@
     "@types/multer": "^1.4.2",
     "@types/multer-s3": "^2.7.7",
     "@types/nodemailer": "^6.4.0",
+    "@types/passport": "^1.0.2",
+    "@types/passport-jwt": "^3.0.3",
     "nodemon": "^2.0.2"
   },
   "resolutions": {
